vendor/bifrost/tls/bindings/x509.odin


	// X509_PUBKEY_get0_param outputs fields of |pub| and returns one. If |out_obj|
	// is not NULL, it sets |*out_obj| to AlgorithmIdentifier's OID. If |out_key|
	// is not NULL, it sets |*out_key| and |*out_key_len| to the encoded public key.
	// If |out_alg| is not NULL, it sets |*out_alg| to the AlgorithmIdentifier.
	//
	// All pointers outputted by this function are internal to |pub| and must not be
	// freed by the caller. Additionally, although some outputs are non-const,
	// callers must not mutate the resulting objects.
	//
	// Note: X.509 SubjectPublicKeyInfo structures store the encoded public key as a
	// BIT STRING. |*out_key| and |*out_key_len| will silently pad the key with zero
	// bits if |pub| did not contain a whole number of bytes. Use
	// |X509_PUBKEY_get0_public_key| to preserve this information.
	X509_PUBKEY_get0_param :: proc(out_obj: ^^ASN1_OBJECT, out_key: ^^u8, out_key_len: ^i32, out_alg: ^^X509_ALGOR, pub: ^X509_PUBKEY) -> i32 ---

	// X509_PUBKEY_get0_public_key returns |pub|'s encoded public key.
	X509_PUBKEY_get0_public_key :: proc(pub: ^X509_PUBKEY) -> ^ASN1_BIT_STRING ---

	// X509_EXTENSION_new returns a newly-allocated, empty |X509_EXTENSION| object
	// or NULL on error.
	X509_EXTENSION_new :: proc() -> ^X509_EXTENSION ---

	// X509_EXTENSION_free releases memory associated with |ex|.
	X509_EXTENSION_free :: proc(ex: ^X509_EXTENSION) ---

	// d2i_X509_EXTENSION parses up to |len| bytes from |*inp| as a DER-encoded
	// X.509 Extension (RFC 5280), as described in |d2i_SAMPLE|.
	d2i_X509_EXTENSION :: proc(out: ^^X509_EXTENSION, inp: ^^u8, len: c.long) -> ^X509_EXTENSION ---

	// i2d_X509_EXTENSION marshals |ex| as a DER-encoded X.509 Extension (RFC
	// 5280), as described in |i2d_SAMPLE|.
	i2d_X509_EXTENSION :: proc(ex: ^X509_EXTENSION, outp: ^^u8) -> i32 ---

	// X509_EXTENSION_dup returns a newly-allocated copy of |ex|, or NULL on error.
	// This function works by serializing the structure, so if |ex| is incomplete,
	// it may fail.
	X509_EXTENSION_dup :: proc(ex: ^X509_EXTENSION) -> ^X509_EXTENSION ---

	// X509_EXTENSION_create_by_NID creates a new |X509_EXTENSION| with type |nid|,
	// value |data|, and critical bit |crit|. It returns an |X509_EXTENSION| on
	// success, and NULL on error. |nid| should be a |NID_*| constant.
	//
	// If |ex| and |*ex| are both non-NULL, |*ex| is used to hold the result,
	// otherwise a new object is allocated. If |ex| is non-NULL and |*ex| is NULL,
	// the function sets |*ex| to point to the newly allocated result, in addition
	// to returning the result.
	X509_EXTENSION_create_by_NID :: proc(ex: ^^X509_EXTENSION, nid: i32, crit: i32, data: ^ASN1_OCTET_STRING) -> ^X509_EXTENSION ---

	// X509_EXTENSION_create_by_OBJ behaves like |X509_EXTENSION_create_by_NID|, but
	// the extension type is determined by an |ASN1_OBJECT|.
	X509_EXTENSION_create_by_OBJ :: proc(ex: ^^X509_EXTENSION, obj: ^ASN1_OBJECT, crit: i32, data: ^ASN1_OCTET_STRING) -> ^X509_EXTENSION ---

	// X509_EXTENSION_get_object returns |ex|'s extension type. This function
	// returns a non-const pointer for OpenSSL compatibility, but callers should not
	// mutate the result.
	X509_EXTENSION_get_object :: proc(ex: ^X509_EXTENSION) -> ^ASN1_OBJECT ---

	// X509_EXTENSION_get_data returns |ne|'s extension value. This function returns
	// a non-const pointer for OpenSSL compatibility, but callers should not mutate
	// the result.
	X509_EXTENSION_get_data :: proc(ne: ^X509_EXTENSION) -> ^ASN1_OCTET_STRING ---

	// X509_EXTENSION_get_critical returns one if |ex| is critical and zero
	// otherwise.
	X509_EXTENSION_get_critical :: proc(ex: ^X509_EXTENSION) -> i32 ---

	// X509_EXTENSION_set_object sets |ex|'s extension type to |obj|. It returns one
	// on success and zero on error.
	X509_EXTENSION_set_object :: proc(ex: ^X509_EXTENSION, obj: ^ASN1_OBJECT) -> i32 ---

	// X509_EXTENSION_set_critical sets |ex| to critical if |crit| is non-zero and
	// to non-critical if |crit| is zero.
	X509_EXTENSION_set_critical :: proc(ex: ^X509_EXTENSION, crit: i32) -> i32 ---

	// X509_EXTENSION_set_data set's |ex|'s extension value to a copy of |data|. It
	// returns one on success and zero on error.
	X509_EXTENSION_set_data :: proc(ex: ^X509_EXTENSION, data: ^ASN1_OCTET_STRING) -> i32 ---
}

sk_X509_EXTENSION_delete_if_func :: proc "c" (^X509_EXTENSION, rawptr) -> i32
sk_X509_EXTENSION_free_func      :: proc "c" (^X509_EXTENSION)
sk_X509_EXTENSION_copy_func      :: proc "c" (^X509_EXTENSION) -> ^X509_EXTENSION
sk_X509_EXTENSION_cmp_func       :: proc "c" (^^X509_EXTENSION, ^^X509_EXTENSION) -> i32

// Extension lists.
//
// The following functions manipulate lists of extensions. Most of them have
// corresponding functions on the containing |X509|, |X509_CRL|, or
// |X509_REVOKED|.
X509_EXTENSIONS :: stack_st_X509_EXTENSION

@(default_calling_convention="c")
foreign lib {
	// d2i_X509_EXTENSIONS parses up to |len| bytes from |*inp| as a DER-encoded
	// SEQUENCE OF Extension (RFC 5280), as described in |d2i_SAMPLE|.
	d2i_X509_EXTENSIONS :: proc(out: ^^X509_EXTENSIONS, inp: ^^u8, len: c.long) -> ^X509_EXTENSIONS ---

	// i2d_X509_EXTENSIONS marshals |alg| as a DER-encoded SEQUENCE OF Extension
	// (RFC 5280), as described in |i2d_SAMPLE|.
	i2d_X509_EXTENSIONS :: proc(alg: ^X509_EXTENSIONS, outp: ^^u8) -> i32 ---

	// X509v3_get_ext_count returns the number of extensions in |x|.
	X509v3_get_ext_count :: proc(x: ^stack_st_X509_EXTENSION) -> i32 ---

	// X509v3_get_ext_by_NID returns the index of the first extension in |x| with
	// type |nid|, or a negative number if not found. If found, callers can use
	// |X509v3_get_ext| to look up the extension by index.
	//
	// If |lastpos| is non-negative, it begins searching at |lastpos| + 1. Callers
	// can thus loop over all matching extensions by first passing -1 and then
	// passing the previously-returned value until no match is returned.
	X509v3_get_ext_by_NID :: proc(x: ^stack_st_X509_EXTENSION, nid: i32, lastpos: i32) -> i32 ---

	// X509v3_get_ext_by_OBJ behaves like |X509v3_get_ext_by_NID| but looks for
	// extensions matching |obj|.
	X509v3_get_ext_by_OBJ :: proc(x: ^stack_st_X509_EXTENSION, obj: ^ASN1_OBJECT, lastpos: i32) -> i32 ---

	// X509v3_get_ext_by_critical returns the index of the first extension in |x|
	// whose critical bit matches |crit|, or a negative number if no such extension
	// was found.
	//
	// If |lastpos| is non-negative, it begins searching at |lastpos| + 1. Callers
	// can thus loop over all matching extensions by first passing -1 and then
	// passing the previously-returned value until no match is returned.
	X509v3_get_ext_by_critical :: proc(x: ^stack_st_X509_EXTENSION, crit: i32, lastpos: i32) -> i32 ---

	// X509v3_get_ext returns the extension in |x| at index |loc|, or NULL if |loc|
	// is out of bounds. This function returns a non-const pointer for OpenSSL
	// compatibility, but callers should not mutate the result.
	X509v3_get_ext :: proc(x: ^stack_st_X509_EXTENSION, loc: i32) -> ^X509_EXTENSION ---

	// X509v3_delete_ext removes the extension in |x| at index |loc| and returns the
	// removed extension, or NULL if |loc| was out of bounds. If an extension was
	// returned, the caller must release it with |X509_EXTENSION_free|.
	X509v3_delete_ext :: proc(x: ^stack_st_X509_EXTENSION, loc: i32) -> ^X509_EXTENSION ---

	// X509v3_add_ext adds a copy of |ex| to the extension list in |*x|. If |*x| is
	// NULL, it allocates a new |STACK_OF(X509_EXTENSION)| to hold the copy and sets
	// |*x| to the new list. It returns |*x| on success and NULL on error. The
	// caller retains ownership of |ex| and can release it independently of |*x|.
	//
	// The new extension is inserted at index |loc|, shifting extensions to the
	// right. If |loc| is -1 or out of bounds, the new extension is appended to the
	// list.
	X509v3_add_ext :: proc(x: ^^stack_st_X509_EXTENSION, ex: ^X509_EXTENSION, loc: i32) -> ^stack_st_X509_EXTENSION ---

	// X509V3_EXT_d2i decodes |ext| and returns a pointer to a newly-allocated
	// structure, with type dependent on the type of the extension. It returns NULL
	// if |ext| is an unsupported extension or if there was a syntax error in the
	// extension. The caller should cast the return value to the expected type and
	// free the structure when done.
	//
	// WARNING: Casting the return value to the wrong type is a potentially
	// exploitable memory error, so callers must not use this function before
	// checking |ext| is of a known type. See the list at the top of this section
	// for the correct types.
	X509V3_EXT_d2i :: proc(ext: ^X509_EXTENSION) -> rawptr ---

	// X509V3_get_d2i finds and decodes the extension in |extensions| of type |nid|.
	// If found, it decodes it and returns a newly-allocated structure, with type
	// dependent on |nid|. If the extension is not found or on error, it returns
	// NULL. The caller may distinguish these cases using the |out_critical| value.
	//
	// If |out_critical| is not NULL, this function sets |*out_critical| to one if
	// the extension is found and critical, zero if it is found and not critical, -1
	// if it is not found, and -2 if there is an invalid duplicate extension. Note
	// this function may set |*out_critical| to one or zero and still return NULL if
	// the extension is found but has a syntax error.
	//
	// If |out_idx| is not NULL, this function looks for the first occurrence of the
	// extension after |*out_idx|. It then sets |*out_idx| to the index of the
	// extension, or -1 if not found. If |out_idx| is non-NULL, duplicate extensions
	// are not treated as an error. Callers, however, should not rely on this
	// behavior as it may be removed in the future. Duplicate extensions are
	// forbidden in RFC 5280.
	//
	// WARNING: This function is difficult to use correctly. Callers should pass a
	// non-NULL |out_critical| and check both the return value and |*out_critical|
	// to handle errors. If the return value is NULL and |*out_critical| is not -1,
	// there was an error. Otherwise, the function succeeded and but may return NULL
	// for a missing extension. Callers should pass NULL to |out_idx| so that
	// duplicate extensions are handled correctly.
	//
	// Additionally, casting the return value to the wrong type is a potentially
	// exploitable memory error, so callers must ensure the cast and |nid| match.
	// See the list at the top of this section for the correct types.
	X509V3_get_d2i :: proc(extensions: ^stack_st_X509_EXTENSION, nid: i32, out_critical: ^i32, out_idx: ^i32) -> rawptr ---

	// X509V3_EXT_free casts |ext_data| into the type that corresponds to |nid| and
	// releases memory associated with it. It returns one on success and zero if
	// |nid| is not a known extension.
	//
	// WARNING: Casting |ext_data| to the wrong type is a potentially exploitable
	// memory error, so callers must ensure |ext_data|'s type matches |nid|. See the
	// list at the top of this section for the correct types.
	//
	// TODO(davidben): OpenSSL upstream no longer exposes this function. Remove it?
	X509V3_EXT_free :: proc(nid: i32, ext_data: rawptr) -> i32 ---

	// X509V3_EXT_i2d casts |ext_struc| into the type that corresponds to
	// |ext_nid|, serializes it, and returns a newly-allocated |X509_EXTENSION|
	// object containing the serialization, or NULL on error. The |X509_EXTENSION|
	// has OID |ext_nid| and is critical if |crit| is one.
	//
	// WARNING: Casting |ext_struc| to the wrong type is a potentially exploitable
	// memory error, so callers must ensure |ext_struct|'s type matches |ext_nid|.
	// See the list at the top of this section for the correct types.
	X509V3_EXT_i2d :: proc(ext_nid: i32, crit: i32, ext_struc: rawptr) -> ^X509_EXTENSION ---
}

// The following constants control the behavior of |X509V3_add1_i2d| and related
// functions.

// X509V3_ADD_OP_MASK can be ANDed with the flags to determine how duplicate
// extensions are processed.
X509V3_ADD_OP_MASK :: 0xf
